2005-03-01  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #776]
	* iconv/iconvconfig.c: Fix comment for the output file.
	(write_output): Clear padding in header.

2005-03-03  Ulrich Drepper  <drepper@redhat.com>

	* elf/dl-close.c (_dl_close): Don't try to set up new searchpath if the
	loader is closed.  Fixes unload3.
	* elf/tst-global1.c: New file.
	* elf/Makefile (tests): Add tst-global1.
	* elf/testobj2.c (p): New function.

2005-03-03  Jakub Jelinek  <jakub@redhat.com>

	* elf/Makefile: Add rules to build and run unload3 test.
	* elf/unload3.c: New test.
	* elf/unload3mod1.c: New file.
	* elf/unload3mod2.c: New file.
	* elf/unload3mod3.c: New file.
	* elf/unload3mod4.c: New file.

2005-02-21  Alan Modra <amodra@bigpond.net.au>

	* sysdeps/unix/sysv/linux/powerpc/sys/procfs.h (elf_vrreg_t): Don't
	use __uint128_t.

2005-03-01  Jakub Jelinek  <jakub@redhat.com>

	* posix/bits/unistd.h (read, pread, pread64): Use __bos0 instead
	of __bos.
	* socket/bits/socket2.h (recv, recvfrom): Likewise.

2005-03-01  Roland McGrath  <roland@redhat.com>

	[BZ #721]
	* sysdeps/arm/dl-machine.h (ELF_MACHINE_NO_RELA): Define this outside
	of [RESOLVE_MAP].

2005-03-01  Alfred M. Szmidt  <ams@gnu.org>

	* elf/dl-load.c (__stack_prot) [!PROT_GROWSUP && !PROT_GROWSDOWN]:
	Add missing initializer.

	* malloc/arena.c: #include <stdbool.h> outside of [SHARED &&
	USE_TLS && !USE___THREAD].

2005-02-26  GOTO Masanori  <gotom@debian.or.jp>

	* csu/Makefile: Use printf instead of echo for some shells.

2005-02-28  Roland McGrath  <roland@redhat.com>

	* debug/warning-nop.c (__nop): Rename to nop, make it static.
	(__warndecl): Use alias attribute directly, instead of strong_alias
	macro.  Add attribute_hidden.

2005-02-28  Ulrich Drepper  <drepper@redhat.com>

	* posix/bits/unistd.h: Avoid calling __*_chk variants if we can
	determine the call will never trigger a failure.
	* debug/read_chk.c (__read_chk): Always fail if the buffer is too
	small.
	* debug/readlink_chk.c (__readlink_chk): Likewise.