@@ -1,0 +1,4 @@
+# Temporary workaround for GCC4 PR debug/19345
+ifeq ($(subdir),string)
+CFLAGS-string-inlines.c += -g0
+endif
